--- a/src/Emr.API/Emr.API.csproj
+++ b/src/Emr.API/Emr.API.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.7.1" />
   </ItemGroup>
 
@@ -15,7 +19,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Emr.Domain\Emr.Domain.csproj" />
     <ProjectReference Include="..\Emr.Infrastructure\Emr.Infrastructure.csproj" />
   </ItemGroup>
 
