--- a/src/Emr.API/appsettings.json
+++ b/src/Emr.API/appsettings.json
@@ -1,13 +1,12 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionString": {
+    "icaredb": "Server=tcp:localhost;Database=icaredb;User Id=sa;Password=Danh@123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionString": {
-    "orderingdb": ""
   }
-
 }
