--- a/src/Emr.API/appsettings.json
+++ b/src/Emr.API/appsettings.json
@@ -1,8 +1,8 @@
 {
-  "AllowedHosts": "*",
   "ConnectionString": {
-    "icaredb": "Server=tcp:localhost;Database=icaredb;User Id=sa;Password=Danh@123;"
+    "icaredb": "Server=tcp:localhost;Database=icare;User Id=root;Password=danh@123;"
   },
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
