- fix connection string

--- a/src/Emr.API/appsettings.json
+++ b/src/Emr.API/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionString": {
-    "icaredb": "Server=tcp:localhost;Database=icare;User Id=root;Password=danh@123;"
+  "ConnectionStrings": {
+    "icaredb": "Server=localhost;Database=icare;User Id=root;Password=danh@123;"
   },
   "AllowedHosts": "*",
   "Logging": {
